--- a/backend/core/templates/core/base.html
+++ b/backend/core/templates/core/base.html
@@ -6,6 +6,7 @@
     <title>{% block titulo %}Dashboard{% endblock %} - VYC Predictivo Cloud</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
     <style>
@@ -15,7 +16,6 @@
         }
 
         .main-content {
-            margin-left: 280px;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
